imesh-tutorial-application/resources.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: echoserver-service-non-istio
  namespace: k8s-gw
spec:
  type: ClusterIP
  selector:
    app: echoserver-app-non-istio
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echoserver-depl-non-istio
  namespace: k8s-gw
  labels:
    app: echoserver-app-non-istio
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echoserver-app-non-istio
      version: v1
  template:
    metadata:
      labels:
        app: echoserver-app-non-istio
        version: v1
    spec:
      containers:
        - name: echoserver-app-non-istio
          image: imeshai/echoserver
          ports:
            - containerPort: 80
