imesh-tutorial-application/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: k8s-http-route-non-istio
  namespace: k8s-gw
spec:
  parentRefs:
    - name: k8s-gateway
      namespace: k8s-gw
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /non-istio
      backendRefs:
        - name: echoserver-service-non-istio
          port: 80
